--- a/homepage.css
+++ b/homepage.css
@@ -4,51 +4,57 @@ body {
   padding: 0;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+}
+
 header {
   background-color: #4caf50;
   color: white;
   text-align: center;
-  padding: 10px 0;
+  padding: 1rem 0;
 }
 
 nav a {
-  margin: 0 10px;
+  margin: 0 1rem;
   color: white;
   text-decoration: none;
   font-size: 1.2em;
 }
 
 main {
-  padding: 20px;
+  padding: 1.2rem;
   text-align: center;
 }
 
 #plants-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  gap: 20px;
-  margin-top: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  gap: 1.5rem;
+  margin-top: 1.5rem;
   margin: auto;
 }
 
 .plant-card {
-  border: 1px solid #ddd;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   padding: 15px;
   border-radius: 10px;
-  text-align: center;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .plant-card img {
   max-width: 100%;
-  height: 150px;
+  height: 15rem;
   object-fit: cover;
   border-radius: 8px;
 }
 
 .plant-card h3 {
   margin: 10px 0;
-  font-size: 1.2em;
+  font-size: 1em;
 }
 
 .plant-card button {
@@ -62,4 +68,40 @@ main {
 
 .plant-card button:hover {
   background-color: #45a049;
+}
+
+#pagination-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.pagination-button {
+  padding: 10px 15px;
+  margin: 0 5px;
+  font-size: 16px;
+  cursor: pointer;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #f9f9f9;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+.pagination-button:hover {
+  background-color: #ddd;
+  border-color: #bbb;
+}
+
+.pagination-button.active {
+  background-color: #4caf50;
+  border-color: #4caf50;
+  color: white;
+}
+
+.pagination-button:first-child {
+  border-radius: 5px 0 0 5px;
+}
+
+.pagination-button:last-child {
+  border-radius: 0 5px 5px 0;
 }
