--- a/plant-tracker.css
+++ b/plant-tracker.css
@@ -58,7 +58,7 @@ footer {
 .plant-card {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 60%;
     margin: auto;
     margin-top: 5%;
     margin-bottom: 5%;
@@ -70,6 +70,11 @@ footer {
 
 }
 
+
+.status {
+    margin: auto;
+}
+
 .plant-card img {
     width: 100%;
     height: 60%;
@@ -78,11 +83,34 @@ footer {
 
 .plant-card h3 {
     color: white;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .plant-card p {
     margin: 5px 0;
     color: white;
+}
+
+.watered-button {
+    font-size: 1.2rem;
+    border: 2px solid black;
+    padding: 0.7rem;
+    border-radius: 10px;
+    background-color: #4CAF50;
+    margin-bottom: 10px;
+    align-self: center;
+
+}
+
+.watered-button:hover {
+    cursor: pointer;
+    background-color: rgb(8, 22, 101);
+    color: white;
+}
+
+#needs-watering {
+    color: rgb(8, 22, 101);
 }
 
 
@@ -126,6 +154,7 @@ footer {
 .delete-details {
     display: flex;
     justify-content: space-around;
+    margin-top: 10px;
     margin-bottom: 2%;
 }
 
